Updated end-of-book-solutions styling, yet the bug (text bleeding off the page) persists.

--- a/css/ccap-psychology.less
+++ b/css/ccap-psychology.less
@@ -875,7 +875,11 @@ div.cnx-eoc > .title {
 div.end-of-book-solutions div.solution {
   display: inline;
 
-  > div.title a.solution {
+  > div.title {
+    padding-right: .5em;
+  }
+
+  > div.body {
     padding-right: .5em;
   }
 }
